tests/errors/borrow-return-call-conflict.ari
fn identity(value: ref mut i64) -> ref mut i64 {
  return value;
}

fn main() -> i64 {
  var number: i64 = 1;
  let unique: ref mut i64 = identity(ref mut number);
  let shared: ref i64 = ref number;
  return 0;
}
